# image-generate-mcp-remote

./: .env.example  .gitignore  AGENTS.md  README.md  SYSTEMD_DEPLOYMENT_GUIDE.md  pyproject.toml
.github/workflows/: release.yml
image_generate_mcp_remote/: __init__.py  config.py  errors.py  server.py  storage.py
image_generate_mcp_remote/contracts/: __init__.py  enums.py  image_size.py  presets.py  requests.py
image_generate_mcp_remote/models/: common.py
image_generate_mcp_remote/presets/: __init__.py  base.py  input_images.py  loader.py  models.py  registry.py
image_generate_mcp_remote/presets/apiyi/: __init__.py  gpt_image_2.py
image_generate_mcp_remote/presets/copperai/: __init__.py  gpt_image_2.py
image_generate_mcp_remote/presets/google/: __init__.py  nano_banana.py
image_generate_mcp_remote/presets/laozhang/: __init__.py  gpt_image_2_default.py  gpt_image_2_enterprise.py  gpt_image_2_sora_official.py  gpt_image_2_vip.py
image_generate_mcp_remote/presets/openai/: __init__.py  gpt_image_2.py
image_generate_mcp_remote/presets/right_codes/: __init__.py  gpt_image_2.py  gpt_image_2_vip.py  nano_banana_2_images.py
image_generate_mcp_remote/tools/: __init__.py  catalog.py  gpt_image_2_official.py  gpt_image_2_temporary.py  gpt_image_2_url.py  nano_banana_2_official.py  nano_banana_2_temporary.py  official_common.py  preset_catalog.py  size_normalization.py  temporary_common.py
skills/gpt-icon-generate/: SKILL.md
skills/gpt-icon-generate/scripts/: plan_icon_sheet_params.py  split_icon_sheet_connected_bbox.py  verify_image_output.py
tests/: test_catalog.py  test_gpt_image_2_official.py  test_gpt_image_2_url.py  test_image_size.py  test_nano_banana_2_official.py  test_preset_catalog.py  test_server.py
