[project]
name = "image-generate-mcp-remote"
version = "0.9.2"
description = "Remote MCP server for image generation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.28.0",
    "mcp[cli]>=1.12.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/zztdandan/image-generate-mcp-remote"
Repository = "https://github.com/zztdandan/image-generate-mcp-remote"
Issues = "https://github.com/zztdandan/image-generate-mcp-remote/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
]

[project.scripts]
image-generate-mcp-remote = "image_generate_mcp_remote.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["image_generate_mcp_remote"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
